@@ -2,6 +2,8 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
 
 1.52     not yet released
           - added cookie based authentication and logout button
+          - updated calendar popup
+            - use mousewheel to change date / time
           - Bug Fixes
             - fixed scrolling to top on clicking calendar icon
 
